# learn-opengl-starter

./: .gitignore  CMakeLists.txt  README.md
include/: LoadShaders.h  vgl.h
shaders/: triangles.frag  triangles.vert
src/: LoadShaders.cpp  main.cpp
